# bids2cite

./: .covragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  Makefile  README.md  bids2datacite.py  bids_desc_2_datacite.py  convert_ds_desc_to_datacite.py  datacite.yml  pyproject.toml  references.py  requirements.txt  setup.cfg  setup.py  tox.ini  utils.py  versioneer.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check_md_links.yml  package.yml  test.yml  test_and_coverage.yml  validate_cff.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml
bids2cite/: __init__.py  _authors.py  _license.py  _references.py  _utils.py  _version.py  authors.py  bids2cite.py  license.py  references.py  utils.py
docs/: make.bat
docs/source/: bids2cite.rst  conf.py  general.md  index.rst  modules.rst  usage_notes.rst
inputs/: authors.tsv  funding.tsv
test/bids/: datacite.yml  dataset_description.json
test/data/: datacite.yml  dataset_description.json
tests/: conftest.py  test_authors.py  test_bids2cite.py  test_license.py  test_main.py  test_references.py  test_utils.py  utils.py
tests/bids/: .bidsignore  .gitignore  datacite.yml  dataset_description.json
tests/data/: datacite.yml
