[metadata]
name = bids2cite
url = https://github.com/Remi-Gau/bids2cite
download_url = https://github.com/Remi-Gau/bids2cite
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
license = LGPL-3.0
description = create a citation file for a BIDS dataset
keywords =
    BIDS
    datacite
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides = bids2cite

[options.entry_points]
console_scripts =
    bids2cite = bids2cite.bids2cite:bids2cite

[options]
tests_require = pytest
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
    myst-parser
    sphinx-copybutton
    rstcheck
    sphinx-argparse
docs =
    %(doc)s
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
    black >=21
    pre-commit
    sourcery
    mypy
test =
    pytest >=6.2.5
    pytest-cov
tests =
    %(test)s
dev =
    %(doc)s
    %(style)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = bids2cite/_version.py
tag_prefix =

[flake8]
max-line-length = 110
count = True
show-source = True
statistics = True
exclude=
    *build
    .git
    __pycache__
    tests/*
    _version.py
    versioneer.py
max-complexity = 10
