[metadata]
name = bids2cite
description = create a citation file for a BIDS dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Remi-Gau/bids2cite
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
license = LGPL-3.0
license_files = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
download_url = https://github.com/Remi-Gau/bids2cite
keywords =
    BIDS
    datacite
provides = bids2cite

[options]
packages = find:
install_requires =
    cffconvert
    crossref-commons
    pandas
    requests
    rich
    ruamel.yaml
python_requires = >=3.8
include_package_data = True
test_suite = pytest
tests_require = pytest
zip_safe = False

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    bids2cite = bids2cite.bids2cite:cli

[options.extras_require]
dev =
    %(doc)s
    %(style)s
    %(test)s
doc =
    myst-parser
    rstcheck
    sphinx
    sphinx-argparse
    sphinx-argparse
    sphinx-copybutton
    sphinx-rtd-theme
docs =
    %(doc)s
style =
    black
    flake8
    flake8-docstrings
    mypy
    pre-commit
    reorder-python-imports
    sourcery
    types-requests
test =
    coverage
    pytest
tests =
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = bids2cite/_version.py
tag_prefix = v

[flake8]
max-line-length = 110
count = True
show-source = True
statistics = True
exclude =
    *build
    .git
    __pycache__
    tests/*
    _version.py
    versioneer.py
max-complexity = 10
per-file-ignores =
    __init__.py: D104

[mypy]
exclude = ['tests/*']
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-bids2cite._version]
ignore_errors = True

[mypy-tests._version]
ignore_errors = True

[mypy-cffconvert.*]
ignore_missing_imports = True

[mypy-crossref_commons.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-rich.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[tool:pytest]
addopts = -ra -vv

[coverage:run]
branch = True
omit = *_version.py

[coverage:report]
show_missing = True
skip_covered = True
omit =
    *_version.py
    __init__.py
